--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWruNu2MpLPCU6tzxcRm79hKqT5IVBzB8",
-    authDomain: "multiplayer-racing-e2773.firebaseapp.com",
-    databaseURL: "https://multiplayer-racing-e2773-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-racing-e2773",
-    storageBucket: "multiplayer-racing-e2773.appspot.com",
-    messagingSenderId: "695142558940",
-    appId: "1:695142558940:web:68ef57282cb65bed8c1819"
-  };
+  const firebaseConfig = {
+  apiKey: "AIzaSyBtRUR9hu0cTiTEgQZqHcfJdJTOphaaG88",
+  authDomain: "car-racing-5d244.firebaseapp.com",
+  databaseURL: "https://car-racing-5d244-default-rtdb.firebaseio.com",
+  projectId: "car-racing-5d244",
+  storageBucket: "car-racing-5d244.appspot.com",
+  messagingSenderId: "855601841104",
+  appId: "1:855601841104:web:0737b0a2cd51545f286fd5"
+};
+
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
