--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <script>
   // Your web app's Firebase configuration
-  const firebaseConfig = {
+  var firebaseConfig = {
   apiKey: "AIzaSyBtRUR9hu0cTiTEgQZqHcfJdJTOphaaG88",
   authDomain: "car-racing-5d244.firebaseapp.com",
   databaseURL: "https://car-racing-5d244-default-rtdb.firebaseio.com",
