--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 };
 
   // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
+ var app = initializeApp(firebaseConfig);
+//  firebase.initializeApp(firebaseConfig);
 </script>
 
 <!--database code ends here-->    
