--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 };
 
   // Initialize Firebase
- var app = initializeApp(firebaseConfig);
-//  firebase.initializeApp(firebaseConfig);
+
+  firebase.initializeApp(firebaseConfig);
 </script>
 
 <!--database code ends here-->    
